--- a/app/src/main/res/layout/key_card_view.xml
+++ b/app/src/main/res/layout/key_card_view.xml
@@ -1,13 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/card_view_padding">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/key_card_view"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/relative_layout_padding">
+
+            <TextView
+                android:id="@+id/key_address_line_1_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_large_size" />
+
+            <TextView
+                android:id="@+id/key_address_line_2_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/key_address_line_1_view"
+                android:textSize="@dimen/text_medium_size" />
+
+            <View
+                android:id="@+id/space_1"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@id/key_address_line_2_view"
+                android:layout_marginBottom="@dimen/linear_layout_padding"
+                android:layout_marginTop="@dimen/linear_layout_padding" />
+
+            <LinearLayout
+                android:id="@+id/key_header_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/space_1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/key_taken_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/Taken" />
+
+                <TextView
+                    android:id="@+id/jkey_returned_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/Returned"
+                    android:textAlignment="textEnd" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/key_header_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/key_header_1">
+
+                <TextView
+                    android:id="@+id/key_taken_date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="textStart" />
+
+                <TextView
+                    android:id="@+id/key_returned_date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="textEnd" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/key_header_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@+id/key_header_2">
+
+                <TextView
+                    android:id="@+id/key_taken_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="textStart"
+                    android:textSize="@dimen/text_large_size"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/key_returned_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="textEnd"
+                    android:textSize="@dimen/text_large_size"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/space_2"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@id/key_header_3"
+                android:layout_marginBottom="@dimen/linear_layout_padding"
+                android:layout_marginTop="@dimen/linear_layout_padding"
+                android:background="#eeeeee" />
+
+            <LinearLayout
+                android:id="@+id/key_header_4"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/space_2">
+
+                <Button
+                    android:id="@+id/key_button"
+                    android:text="@string/Take_Key"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
