--- a/app/src/main/res/layout/activity_key.xml
+++ b/app/src/main/res/layout/activity_key.xml
@@ -8,5 +8,35 @@
     tools:context="example.tanprasit.com.companion_app.activities.KeyActivity"
     tools:showIn="@layout/content_key">
 
-    <include layout="@layout/content_key" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorBackground"
+        android:contentDescription="@string/login_background"
+        android:scaleType="fitXY" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/my_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
+
+        </android.support.design.widget.AppBarLayout>
+
+        <include layout="@layout/content_key" />
+
+    </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
