--- a/app/src/main/res/layout/content_key.xml
+++ b/app/src/main/res/layout/content_key.xml
@@ -8,11 +8,19 @@
     tools:context="example.tanprasit.com.companion_app.activities.KeyActivity"
     tools:showIn="@layout/activity_key">
 
-    <!-- A RecyclerView with some commonly used attributes -->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_key_recycler_view"
-        android:scrollbars="vertical"
+    <!--Swipe refresh layout-->
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/activity_key_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <!-- A RecyclerView with some commonly used attributes -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activity_key_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
