--- a/app/src/main/res/layout/key_card_view.xml
+++ b/app/src/main/res/layout/key_card_view.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent"
     android:padding="@dimen/card_view_padding">
 
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        card_view:cardElevation="5dp"
+        card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -50,6 +52,14 @@
                     android:text="@string/Taken" />
 
                 <TextView
+                    android:id="@+id/key_pin_header_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/Pin"
+                    android:textAlignment="center" />
+
+                <TextView
                     android:id="@+id/jkey_returned_view"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -73,6 +83,13 @@
                     android:textAlignment="textStart" />
 
                 <TextView
+                    android:id="@+id/key_pin_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="center" />
+
+                <TextView
                     android:id="@+id/key_returned_date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -84,8 +101,8 @@
                 android:id="@+id/key_header_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_below="@+id/key_header_2">
+                android:layout_below="@+id/key_header_2"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/key_taken_time"
@@ -118,15 +135,15 @@
             <LinearLayout
                 android:id="@+id/key_header_4"
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/space_2">
+                android:layout_below="@+id/space_2"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/key_button"
-                    android:text="@string/Take_Key"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/Take_Key" />
 
             </LinearLayout>
 
